--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.114:3.4": "Sie ist von Māras Fesseln gebunden, und der Böse kann mit ihr machen, was er will. ",
   "sn35.114:4.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.114:4.2": "Wenn ein Mönch diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, ",
-  "sn35.114:4.3": "nennt man ihn einen Mönch, der nicht in Māras Schlupfwinkel festgesetzt ist, der nicht in Māras Bann geraten und von Māras Schlinge befreit ist. "
+  "sn35.114:4.3": "nennt man ihn einen Mönch, der nicht in Māras Schlupfwinkel festgesetzt ist, der nicht in Māras Bann geraten und von Māras Schlinge befreit ist. ",
+  "sn35.114:4.4": "Er ist frei von Māras Fesseln, und der Böse kann mit ihm nicht machen, was er will. "
 }
