--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.114_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.114:4.4": "Er ist frei von Māras Fesseln, und der Böse kann mit ihm nicht machen, was er will. ",
   "sn35.114:5.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
   "sn35.114:6.1": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.114:6.2": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, "
+  "sn35.114:6.2": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, ",
+  "sn35.114:6.3": "nennt man sie eine Nonne, die nicht in Māras Schlupfwinkel festgesetzt ist, die nicht in Māras Bann geraten und von Māras Schlinge befreit ist. "
 }
