--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.115:0.1": "Verbundene Lehrreden 35.115 "
+  "sn35.115:0.1": "Verbundene Lehrreden 35.115 ",
+  "sn35.115:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen "
 }
