--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.115:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen ",
   "sn35.115:0.3": "Māras Schlinge (2) ",
   "sn35.115:1.1": "„Mönche und Nonnen, es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.115:1.2": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, "
+  "sn35.115:1.2": "Wenn ein Mönch diesen zustimmt, sie begrüßt und daran weiter festhält, ",
+  "sn35.115:1.3": "nennt man ihn einen Mönch, der in Bezug auf Bilder, die das Auge erkennt, gefesselt ist. Er ist in Māras Schlupfwinkel festgesetzt, ist in Māras Bann geraten und in Māras Schlinge gefangen. "
 }
