--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.115:1.4": "Er ist von Māras Fesseln gebunden, und der Böse kann mit ihm machen, was er will. ",
   "sn35.115:2.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
   "sn35.115:2.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
-  "sn35.115:2.3": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, "
+  "sn35.115:2.3": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, ",
+  "sn35.115:2.4": "nennt man sie eine Nonne, die in Bezug auf Gedanken, die der Geist erkennt, gefesselt ist. Sie ist in Māras Schlupfwinkel festgesetzt, ist in Māras Bann geraten und in Māras Schlinge gefangen. "
 }
