--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn35.115:2.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.115:2.3": "Wenn eine Nonne diesen zustimmt, sie begrüßt und daran weiter festhält, ",
   "sn35.115:2.4": "nennt man sie eine Nonne, die in Bezug auf Gedanken, die der Geist erkennt, gefesselt ist. Sie ist in Māras Schlupfwinkel festgesetzt, ist in Māras Bann geraten und in Māras Schlinge gefangen. ",
-  "sn35.115:2.5": "Sie ist von Māras Fesseln gebunden, und der Böse kann mit ihr machen, was er will. "
+  "sn35.115:2.5": "Sie ist von Māras Fesseln gebunden, und der Böse kann mit ihr machen, was er will. ",
+  "sn35.115:3.1": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
