--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.115:3.3": "nennt man ihn einen Mönch, der nicht in Māras Schlupfwinkel festgesetzt ist, der nicht in Māras Bann geraten und der von Māras Schlinge befreit ist. ",
   "sn35.115:3.4": "Er ist frei von Māras Fesseln, und der Böse kann mit ihm nicht machen, was er will. ",
   "sn35.115:4.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
-  "sn35.115:4.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.115:4.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.115:4.3": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, "
 }
