--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.115_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn35.115:4.1": "Es gibt Töne, die das Ohr erkennt … Es gibt Düfte, die die Nase erkennt … Es gibt Geschmäcke, die die Zunge erkennt … Es gibt Berührungen, die der Körper erkennt … ",
   "sn35.115:4.2": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
   "sn35.115:4.3": "Wenn eine Nonne diesen nicht zustimmt, sie nicht begrüßt und daran nicht weiter festhält, ",
-  "sn35.115:4.4": "nennt man sie eine Nonne, die nicht in Māras Schlupfwinkel festgesetzt ist, die nicht in Māras Bann geraten und die von Māras Schlinge befreit ist. "
+  "sn35.115:4.4": "nennt man sie eine Nonne, die nicht in Māras Schlupfwinkel festgesetzt ist, die nicht in Māras Bann geraten und die von Māras Schlinge befreit ist. ",
+  "sn35.115:4.5": "Sie ist frei von Māras Fesseln, und der Böse kann mit ihr nicht machen, was er will.“ "
 }
