--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn35.116:0.1": "Verbundene Lehrreden 35.116 "
+  "sn35.116:0.1": "Verbundene Lehrreden 35.116 ",
+  "sn35.116:0.2": "12. Das Kapitel über die Welt und die Arten von Sinnesreizen "
 }
