--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "sn35.116:1.5": "„Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
   "sn35.116:1.6": "‚Mönche und Nonnen, ich sage, es ist nicht möglich, durch Gehen das Ende der Welt zu erkennen oder zu sehen oder zu erreichen. ",
   "sn35.116:1.7": "Aber ich sage auch, dass es nicht möglich ist, dem Leiden ein Ende zu machen, ohne ans Ende der Welt zu gelangen.‘ ",
-  "sn35.116:1.8": "Wer kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären?“ "
+  "sn35.116:1.8": "Wer kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären?“ ",
+  "sn35.116:2.1": "Da dachten diese Mönche und Nonnen: "
 }
