--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn35.116:2.1": "Da dachten diese Mönche und Nonnen: ",
   "sn35.116:2.2": "„Dieser Ehrwürdige Ānanda wird vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
   "sn35.116:2.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
-  "sn35.116:2.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ "
+  "sn35.116:2.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ ",
+  "sn35.116:3.1": "Da gingen diese Mönche und Nonnen zu Ānanda und tauschten Willkommensgrüße mit ihm aus. "
 }
