--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "sn35.116:2.3": "Er kann die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "sn35.116:2.4": "Wir wollen zu ihm gehen und ihn zu der Sache befragen.“ ",
   "sn35.116:3.1": "Da gingen diese Mönche und Nonnen zu Ānanda und tauschten Willkommensgrüße mit ihm aus. ",
-  "sn35.116:3.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm das Geschehene und sagten: "
+  "sn35.116:3.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm das Geschehene und sagten: ",
+  "sn35.116:4.13": "„Dass der Ehrwürdige Ānanda das bitte erkläre.“ "
 }
