--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.116:3.1": "Da gingen diese Mönche und Nonnen zu Ānanda und tauschten Willkommensgrüße mit ihm aus. ",
   "sn35.116:3.2": "Nach der Begrüßung und dem Austausch von Höflichkeiten setzten sie sich zur Seite hin. Sie berichteten ihm das Geschehene und sagten: ",
   "sn35.116:4.13": "„Dass der Ehrwürdige Ānanda das bitte erkläre.“ ",
-  "sn35.116:5.1": "„Werte Freunde, wie ein Mensch, der Kernholz bräuchte und auf seiner Suche nach Kernholz zu einem großen Baum käme, der mit Kernholz dastünde. Doch er würde die Wurzel und den Stamm übergehen und dächte, das Kernholz wäre in den Zweigen und Blättern zu suchen. "
+  "sn35.116:5.1": "„Werte Freunde, wie ein Mensch, der Kernholz bräuchte und auf seiner Suche nach Kernholz zu einem großen Baum käme, der mit Kernholz dastünde. Doch er würde die Wurzel und den Stamm übergehen und dächte, das Kernholz wäre in den Zweigen und Blättern zu suchen. ",
+  "sn35.116:5.2": "So geht es den Ehrwürdigen. Obwohl ihr beim Buddha persönlich wart, habt ihr ihn übergangen und gedacht, ihr solltet mich zu der Sache befragen. "
 }
