--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn35.116:5.2": "So geht es den Ehrwürdigen. Obwohl ihr beim Buddha persönlich wart, habt ihr ihn übergangen und gedacht, ihr solltet mich zu der Sache befragen. ",
   "sn35.116:5.3": "Denn er ist der Buddha, der erkennt und sieht. Er ist das Sehen, er ist das Erkennen, er ist die Wahrheit, er ist die Heiligkeit. Er ist der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. ",
   "sn35.116:5.5": "Das wäre die Zeit gewesen, euch zum Buddha zu begeben und ihn zu der Sache zu befragen. ",
-  "sn35.116:5.6": "So wie er es erklärt hätte, hättet ihr es behalten sollen.“ "
+  "sn35.116:5.6": "So wie er es erklärt hätte, hättet ihr es behalten sollen.“ ",
+  "sn35.116:6.1": "„Sicherlich ist er der Buddha, der erkennt und sieht. Sicherlich ist er das Sehen, ist er das Erkennen, ist er die Wahrheit, ist er die Heiligkeit. Sicherlich ist er der Lehrer, der Verkünder, der Erheller der Bedeutung, der Gewährer der Unsterblichkeit, der Herr der Wahrheit, der Klargewordene. "
 }
