--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -27,5 +27,6 @@
   "sn35.116:6.4": "So wie er es erklärt hätte, hätten wir es behalten sollen. ",
   "sn35.116:6.5": "Dennoch wird der Ehrwürdige Ānanda vom Buddha gepriesen und von seinen vernünftigen geistlichen Gefährten geschätzt. ",
   "sn35.116:6.6": "Du kannst die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
-  "sn35.116:6.7": "Bitte erkläre es, wenn es dir nichts ausmacht.“ "
+  "sn35.116:6.7": "Bitte erkläre es, wenn es dir nichts ausmacht.“ ",
+  "sn35.116:7.1": "„Dann hört zu und passt gut auf, ich werde sprechen.“ "
 }
