--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn35.116:6.6": "Du kannst die Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, ausführlich erklären. ",
   "sn35.116:6.7": "Bitte erkläre es, wenn es dir nichts ausmacht.“ ",
   "sn35.116:7.1": "„Dann hört zu und passt gut auf, ich werde sprechen.“ ",
-  "sn35.116:7.2": "„Ja, werter Freund“, antworteten sie. "
+  "sn35.116:7.2": "„Ja, werter Freund“, antworteten sie. ",
+  "sn35.116:7.3": "Ānanda sagte: "
 }
