--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn35.116:8.2": "‚Mönche und Nonnen, ich sage, es ist nicht möglich, durch Gehen das Ende der Welt zu erkennen oder zu sehen oder zu erreichen. ",
   "sn35.116:8.3": "Aber ich sage auch, dass es nicht möglich ist, dem Leiden ein Ende zu machen, ohne ans Ende der Welt zu gelangen.‘ ",
   "sn35.116:8.4": "Ich verstehe die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde, so: ",
-  "sn35.116:8.5": "Alles in der Welt, wodurch man die Welt wahrnimmt und sich die Welt einbildet, "
+  "sn35.116:8.5": "Alles in der Welt, wodurch man die Welt wahrnimmt und sich die Welt einbildet, ",
+  "sn35.116:8.6": "nennt man in der Lehre des Edlen die Welt. "
 }
