--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "sn35.116:8.7": "Und wodurch in der Welt nimmt man die Welt wahr und bildet sich die Welt ein? ",
   "sn35.116:8.8": "Durch das Auge in der Welt nimmt man die Welt wahr und bildet sich die Welt ein. ",
   "sn35.116:8.9": "Durch das Ohr in der Welt … ",
-  "sn35.116:8.10": "Durch die Nase in der Welt … "
+  "sn35.116:8.10": "Durch die Nase in der Welt … ",
+  "sn35.116:8.11": "Durch die Zunge in der Welt … "
 }
