--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.116_translation-de-sabbamitta.json
@@ -49,5 +49,6 @@
   "sn35.116:8.16": "Der Buddha hat diesen kurzen Merksatz vorgestellt und ist dann zu seiner Hütte gegangen, ohne die Bedeutung ausführlich zu erklären: ",
   "sn35.116:8.17": "‚Mönche und Nonnen, ich sage, es ist nicht möglich, durch Gehen das Ende der Welt zu erkennen oder zu sehen oder zu erreichen. ",
   "sn35.116:8.18": "Aber ich sage auch, dass es nicht möglich ist, dem Leiden ein Ende zu machen, ohne ans Ende der Welt zu gelangen.‘ ",
-  "sn35.116:8.19": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. "
+  "sn35.116:8.19": "So verstehe ich die ausführliche Bedeutung dieses kurzen Merksatzes, der vom Buddha vorgestellt wurde. ",
+  "sn35.116:8.20": "Wenn ihr wollt, geht zum Buddha und fragt ihn danach. "
 }
