--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.120:3.5": "Wenn er mit der Nase einen Duft riecht … ",
   "sn35.120:3.6": "Wenn er mit der Zunge einen Geschmack schmeckt … ",
   "sn35.120:3.7": "Wenn er mit dem Körper eine Berührung empfindet … ",
-  "sn35.120:3.8": "Wenn er mit dem Geist einen Gedanken erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. "
+  "sn35.120:3.8": "Wenn er mit dem Geist einen Gedanken erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
+  "sn35.120:3.9": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Denkvermögen und hält es im Zaum. "
 }
