--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.120:3.8": "Wenn er mit dem Geist einen Gedanken erkennt, bleibt er nicht an den Merkmalen und Einzelheiten hängen. ",
   "sn35.120:3.9": "Wenn das Denkvermögen nicht gezügelt wäre, würden schlechte, untaugliche Eigenschaften von Verlangen und Abneigung überhandnehmen. Aus diesem Grund übt er Zügelung, bewacht das Denkvermögen und hält es im Zaum. ",
   "sn35.120:3.10": "So bewacht man die Tore der Sinne. ",
-  "sn35.120:4.1": "Und wie hält man Maß beim Essen? "
+  "sn35.120:4.1": "Und wie hält man Maß beim Essen? ",
+  "sn35.120:4.2": "Da denkt ein Mönch beim Essen über seine Nahrung gründlich nach: "
 }
