--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn35.120:3.10": "So bewacht man die Tore der Sinne. ",
   "sn35.120:4.1": "Und wie hält man Maß beim Essen? ",
   "sn35.120:4.2": "Da denkt ein Mönch beim Essen über seine Nahrung gründlich nach: ",
-  "sn35.120:4.3": "‚Nicht zum Spaß, zum Schwelgen, zur Zier und zum Schmuck, sondern nur, um diesen Körper zu erhalten, um Schaden abzuwenden und die geistliche Übung zu fördern; damit ich altes Unbehagen beende und neues nicht entstehen lasse und ohne Tadel und unbeschwert lebe.‘ "
+  "sn35.120:4.3": "‚Nicht zum Spaß, zum Schwelgen, zur Zier und zum Schmuck, sondern nur, um diesen Körper zu erhalten, um Schaden abzuwenden und die geistliche Übung zu fördern; damit ich altes Unbehagen beende und neues nicht entstehen lasse und ohne Tadel und unbeschwert lebe.‘ ",
+  "sn35.120:4.4": "So hält man Maß beim Essen. "
 }
