--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.120_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn35.120:4.4": "So hält man Maß beim Essen. ",
   "sn35.120:5.1": "Und wie weiht man sich dem Wachsein? ",
   "sn35.120:5.2": "Da läutert ein Mönch am Tag im Gehen und im Sitzen den Geist von Hemmnissen. ",
-  "sn35.120:5.3": "Am Abend läutert er im Gehen und im Sitzen den Geist von Hemmnissen. "
+  "sn35.120:5.3": "Am Abend läutert er im Gehen und im Sitzen den Geist von Hemmnissen. ",
+  "sn35.120:5.4": "Im mittleren Teil der Nacht legt er sich in der Haltung des Löwen nieder – auf die rechte Seite, einen Fuß auf den anderen gelegt – achtsam und umsichtig und im Gedanken an die Zeit des Aufstehens. "
 }
