--- a/translation/en/sujato/sutta/an/an7/an7.49_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/an/an7/an7.49_translation-en-sujato.json
@@ -83,7 +83,7 @@
   "an7.49:14.1": "‘When the perception of not-self in suffering is developed and cultivated it’s very fruitful and beneficial. It culminates in the deathless and ends with the deathless.’ That’s what I said, but why did I say it? ",
   "an7.49:14.2": "",
   "an7.49:14.3": "When a mendicant often meditates with a mind reinforced with the perception of not-self in suffering, their mind is rid of ego, possessiveness, and conceit for this conscious body and all external stimuli. It has gone beyond discrimination, and is peaceful and well freed. ",
-  "an7.49:15.1": "If a mendicant often meditates with a mind reinforced with the perception of not-self in suffering, but their mind is not rid of I-making, mine-making, and conceit for this conscious body and all external stimuli; nor has it gone beyond discrimination, and is not peaceful or well freed, ",
+  "an7.49:15.1": "If a mendicant often meditates with a mind reinforced with the perception of not-self in suffering, but their mind is not rid of  ego, possessiveness, and conceit for this conscious body and all external stimuli; nor has it gone beyond discrimination, and is not peaceful or well freed, ",
   "an7.49:15.2": "they should know: ‘My perception of not-self in suffering is undeveloped. I don’t have any distinction higher than before. I haven’t attained a fruit of development.’ ",
   "an7.49:15.3": "In this way they are aware of the situation. ",
   "an7.49:16.1": "But if a mendicant often meditates with a mind reinforced with the perception of not-self in suffering, and their mind is rid of I-making, mine-making, and conceit for this conscious body and all external stimuli; and it has gone beyond discrimination, and is peaceful and well freed, ",
