--- a/translation/en/sujato/sutta/sn/sn21/sn21.2_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn21/sn21.2_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn21.2:1.4": "“Reverend,” they replied. ",
   "sn21.2:1.5": "Sāriputta said this: ",
   "sn21.2:2.1": "“Just now, reverends, as I was in private retreat this thought came to mind: ",
-  "sn21.2:2.2": "‘Is there anything in the world whose changing and perishing would give rise to sorrow, lamentation, pain, sadness, and distress in me?’ ",
+  "sn21.2:2.2": "‘Is there anything in the world whose decay and perishing would give rise to sorrow, lamentation, pain, sadness, and distress in me?’ ",
   "sn21.2:2.3": "It occurred to me: ",
   "sn21.2:2.4": "‘There is nothing in the world whose decay and perishing would give rise to sorrow, lamentation, pain, sadness, and distress in me.’” ",
   "sn21.2:3.1": "When he said this, Venerable Ānanda said to him, ",
