--- a/translation/en/sujato/sutta/sn/sn25/sn25.5_translation-en-sujato.json
+++ b/translation/en/sujato/sutta/sn/sn25/sn25.5_translation-en-sujato.json
@@ -8,7 +8,7 @@
   "sn25.5:1.4": "feeling born of nose contact, ",
   "sn25.5:1.5": "feeling born of tongue contact, ",
   "sn25.5:1.6": "feeling born of body contact, ",
-  "sn25.5:1.7": "and feeling born of mind contact are impermanent, perishing, and changing. ",
+  "sn25.5:1.7": "and feeling born of mind contact are impermanent, decaying, and perishing. ",
   "sn25.5:1.8": "Someone who has faith and confidence in these principles is called a follower by faith. …” ",
   "sn25.5:1.9": ""
 }
